--- a/result analysis/RL&Baseline_Strategy_Analysis.ipynb
+++ b/result analysis/RL&Baseline_Strategy_Analysis.ipynb
@@ -1269,7 +1269,7 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "local",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
