added classes to handle swaptions and swaps in trading.py

--- a/test.ipynb
+++ b/test.ipynb
@@ -839,22 +839,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_max set to 4\n",
-      "Curve preparation: 0.02s\n",
+      "t_max set to 5\n",
+      "Curve preparation: 0.01s\n",
       "G tensor preparation: 0.00s\n",
       "V tensor preparation: 0.01s\n",
-      "[[ 464483.9393          nan          nan          nan          nan]\n",
-      " [ 723543.9345  487822.0984          nan          nan          nan]\n",
-      " [ 155864.8433  790582.0642  475444.2626          nan          nan]\n",
-      " [   5850.2993 1882137.7563  703585.4278  485114.8793          nan]\n",
-      " [         nan 4844300.0656 1300293.1437  732945.5038  410001.6947]]\n"
+      "[[ 0.         nan     nan     nan     nan     nan     nan     nan     nan]\n",
+      " [-0.0002  0.         nan     nan     nan     nan     nan     nan     nan]\n",
+      " [ 0.      0.0003  0.         nan     nan     nan     nan     nan     nan]\n",
+      " [ 0.0001  0.0003  0.0001  0.         nan     nan     nan     nan     nan]\n",
+      " [ 0.0004  0.0007  0.0004  0.0004  0.         nan     nan     nan     nan]\n",
+      " [    nan  0.0011  0.0009  0.001   0.0006  0.         nan     nan     nan]\n",
+      " [    nan     nan  0.0007  0.0006  0.0001 -0.0006  0.         nan     nan]\n",
+      " [    nan     nan     nan  0.0006  0.0002 -0.0004  0.0002  0.         nan]\n",
+      " [    nan     nan     nan     nan  0.0005 -0.0001  0.0005  0.0002  0.    ]]\n"
      ]
     },
     {
@@ -863,7 +867,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1407,7 @@
     "                where=~np.isnan(swap_value[1:, :]) & ~np.isnan(swap_value[:-1, :])\n",
     "            )\n",
     "\n",
-    "            return np.stack([price, delta, gamma, vega, inactive, swaption_pnl], axis=-1), np.stack([swap_value, swap_pnl], axis=-1)\n",
+    "            return np.stack([price, delta, gamma, vega, swaption_pnl], axis=-1), np.stack([swap_value, swap_pnl], axis=-1)\n",
     "        \n",
     "        \n",
     "        hedge_metrics = risk_metrics(swap_hedge_expiry_relative_idx)\n",
@@ -1559,7 +1563,7 @@
     "    k0_exp=s0_exp,\n",
     "    df_cap=df_cap,\n",
     "    df_raw_spot=df_raw_spot,\n",
-    "    resolution=2, swap_hedge_expiry=1, swap_client_expiry=2, tenor=1, t_max=None, sim_time =1\n",
+    "    resolution=2, swap_hedge_expiry=1, swap_client_expiry=2, tenor=1, t_max=None, sim_time =2\n",
     ")\n",
     "# print all rows and columns of the numpy array with setting printoptions to remove limits, also reduce precition to 4 \n",
     "np.set_printoptions(precision=4, suppress=True)\n",
@@ -1574,7 +1578,7 @@
     "np.sum(lmm.ggh_tensor, axis=(2, 3))\n",
     "lmm.get_swap_matrix()\n",
     "\n",
-    "position = lmm.get_sabr_params()[0][0][:,:,2]*1000\n",
+    "position = lmm.get_sabr_params()[0][1][:,:,0]\n",
     "#delta = lmm.get_sabr_params()[0][0, :, 1]\n",
     "\n",
     "#print(lmm.swap_sim)\n",
@@ -1584,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1592,9 +1596,9 @@
      "output_type": "stream",
      "text": [
       "t_max set to 4\n",
-      "Curve preparation: 0.05s\n",
-      "G tensor preparation: 0.04s\n",
-      "V tensor preparation: 0.71s\n"
+      "Curve preparation: 0.02s\n",
+      "G tensor preparation: 0.00s\n",
+      "V tensor preparation: 0.01s\n"
      ]
     }
    ],
@@ -1609,22 +1613,22 @@
     "    k0_exp=s0_exp,\n",
     "    df_cap=df_cap,\n",
     "    df_raw_spot=df_raw_spot,\n",
-    "    resolution=26, swap_hedge_expiry=1\n",
+    "    resolution=2, swap_hedge_expiry=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(53, 53, 6)"
+       "(2, 9, 9, 6)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,16 +1641,25 @@
     "    return res\n",
     "single_run(42)\n",
     "n_episodes = 2\n",
-    "results = [single_run(i) for i in range(2)]\n",
+    "# (n_episodes, lmm.swap_sim_shape[0], lmm.swap_sim_shape[1], n_metrics)\n",
+    "hedge_swaption = np.zeros((n_episodes, lmm.swap_sim_shape[0], lmm.swap_sim_shape[0], 6))\n",
+    "liab_swaption = np.zeros((n_episodes, lmm.swap_sim_shape[0], lmm.swap_sim_shape[0], 6))\n",
+    "hedge_swap = np.zeros((n_episodes, lmm.swap_sim_shape[0], lmm.swap_sim_shape[0], 2))\n",
+    "liab_swap = np.zeros((n_episodes, lmm.swap_sim_shape[0], lmm.swap_sim_shape[0], 2))\n",
+    "# loop that assigns to the arrays\n",
+    "for i in range(n_episodes):\n",
+    "    lmm.simulate(seed=i)\n",
+    "    lmm.get_swap_matrix()\n",
+    "    res = lmm.get_sabr_params()\n",
+    "    hedge_swaption[i], hedge_swap[i] = res[0]\n",
+    "    liab_swaption[i], liab_swap[i] = res[1]\n",
     "\n",
-    "\n",
-    "results[0][0][0].shape\n",
-    "# episode, hedge/liab, swaption/swap"
+    "hedge_swaption.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,18 +1676,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'LMMSABR' object has no attribute 'swap_hedge_expiry_idx'",
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 5)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mimportlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reload\n\u001b[1;32m      5\u001b[0m reload(utils)\n\u001b[0;32m----> 7\u001b[0m utils\u001b[38;5;241m.\u001b[39mUtils(\u001b[43mlmm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mswap_hedge_expiry_idx\u001b[49m, np_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m, num_sim \u001b[38;5;241m=\u001b[39m lmm\u001b[38;5;241m.\u001b[39mswap_sim\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mconvert_tensor_to_option_objects(results)\n\u001b[1;32m      8\u001b[0m utils\u001b[38;5;241m.\u001b[39mUtils(lmm\u001b[38;5;241m.\u001b[39mswap_hedge_expiry_idx, np_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m, num_sim \u001b[38;5;241m=\u001b[39m lmm\u001b[38;5;241m.\u001b[39mswap_sim\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39magg_poisson_dist(np\u001b[38;5;241m.\u001b[39mones_like(results[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]), np\u001b[38;5;241m.\u001b[39mones_like(results[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'LMMSABR' object has no attribute 'swap_hedge_expiry_idx'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[66], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m reload(utils)\n\u001b[1;32m      7\u001b[0m util \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mUtils(lmm\u001b[38;5;241m.\u001b[39mswap_sim_shape[\u001b[38;5;241m0\u001b[39m],t\u001b[38;5;241m=\u001b[39mlmm\u001b[38;5;241m.\u001b[39mt_to_idx(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m                    , np_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m, num_sim \u001b[38;5;241m=\u001b[39m lmm\u001b[38;5;241m.\u001b[39mswap_sim_shape[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m----> 9\u001b[0m \u001b[43mutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconvert_tensor_to_option_objects\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhedge_swaption\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mliab\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#util.num_period\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#utils.Utils(lmm.swap_hedge_expiry_idx, np_seed=42, num_sim = lmm.swap_sim.shape[1]).agg_poisson_dist(np.ones_like(results[0][0]), np.ones_like(results[0][0]))\u001b[39;00m\n",
+      "File \u001b[0;32m/home/hedge/gamma-vega-rl-hedging/environment/utils.py:389\u001b[0m, in \u001b[0;36mUtils.convert_tensor_to_option_objects\u001b[0;34m(self, option_tensor_list, liab)\u001b[0m\n\u001b[1;32m    386\u001b[0m     factor \u001b[38;5;241m=\u001b[39m net_direction\n\u001b[1;32m    388\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ep \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_episodes):\n\u001b[0;32m--> 389\u001b[0m     price_mat, delta_mat, gamma_mat, vega_mat, inactive_mat \u001b[38;5;241m=\u001b[39m option_tensor_list[ep] \u001b[38;5;241m*\u001b[39m factor[ep]\n\u001b[1;32m    390\u001b[0m     n_steps, n_opts \u001b[38;5;241m=\u001b[39m price_mat\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m    392\u001b[0m     episode_options \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 5)"
      ]
     }
    ],
@@ -1685,8 +1699,12 @@
     "from importlib import reload\n",
     "reload(utils)\n",
     "\n",
-    "utils.Utils(lmm.swap_hedge_expiry_idx, np_seed=42, num_sim = lmm.swap_sim.shape[1]).convert_tensor_to_option_objects(results)\n",
-    "utils.Utils(lmm.swap_hedge_expiry_idx, np_seed=42, num_sim = lmm.swap_sim.shape[1]).agg_poisson_dist(np.ones_like(results[0][0]), np.ones_like(results[0][0]))"
+    "util = utils.Utils(lmm.swap_sim_shape[0],t=lmm.t_to_idx(1)\n",
+    "                   , np_seed=42, num_sim = lmm.swap_sim_shape[1])\n",
+    "util.convert_tensor_to_option_objects(hedge_swaption, liab=True)\n",
+    "\n",
+    "#util.num_period\n",
+    "#utils.Utils(lmm.swap_hedge_expiry_idx, np_seed=42, num_sim = lmm.swap_sim.shape[1]).agg_poisson_dist(np.ones_like(results[0][0]), np.ones_like(results[0][0]))"
    ]
   },
   {
