First run completed with this code

--- a/result analysis/RL&Baseline_Strategy_Analysis.ipynb
+++ b/result analysis/RL&Baseline_Strategy_Analysis.ipynb
@@ -238,6 +238,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting plotly\n",
+            "  Downloading plotly-6.0.1-py3-none-any.whl.metadata (6.7 kB)\n",
+            "Collecting narwhals>=1.15.1 (from plotly)\n",
+            "  Downloading narwhals-1.35.0-py3-none-any.whl.metadata (9.2 kB)\n",
+            "Requirement already satisfied: packaging in /home/hedge/venv/lib/python3.9/site-packages (from plotly) (24.2)\n",
+            "Downloading plotly-6.0.1-py3-none-any.whl (14.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.8/14.8 MB\u001b[0m \u001b[31m77.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading narwhals-1.35.0-py3-none-any.whl (325 kB)\n",
+            "Installing collected packages: narwhals, plotly\n",
+            "Successfully installed narwhals-1.35.0 plotly-6.0.1\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install plotly"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
@@ -341,22 +367,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "o-Idu-hbshjw"
       },
       "outputs": [],
       "source": [
         "workfolder = '/home/hedge/gamma-vega-rl-hedging'+ '/logs/batch14/Table1/TC05/RL/mean_std/spread=0.005_obj=meanstd_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
-        "workfolder2 = '../logs/batch14/Table1/TC05/RL/var/spread=0.005_obj=var_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
-        "workfolder3 = '../logs/batch14/Table1/TC05/RL/cvar/spread=0.005_obj=cvar_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
-        "gkfolder = '../logs/batch14/Table1/TC05/Baseline/delta/greekhedge_spread=0.005_v=0.0_hedttm=30'\n",
-        "gkfolder2 = '../logs/batch14/Table1/TC05/Baseline/gamma/greekhedge_spread=0.005_v=0.0_hedttm=30'"
+        "#workfolder2 = '../logs/batch14/Table1/TC05/RL/var/spread=0.005_obj=var_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
+        "#workfolder3 = '../logs/batch14/Table1/TC05/RL/cvar/spread=0.005_obj=cvar_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
+        "#gkfolder = '../logs/batch14/Table1/TC05/Baseline/delta/greekhedge_spread=0.005_v=0.0_hedttm=30'\n",
+        "#gkfolder2 = '../logs/batch14/Table1/TC05/Baseline/gamma/greekhedge_spread=0.005_v=0.0_hedttm=30'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -374,7 +400,7 @@
         }
       ],
       "source": [
-        "workfolder = '/home/hedge/gamma-vega-rl-hedging/logs/batch1/Table1/TC05/RL/mean_std/spread=0.005_obj=meanstd_threshold=0.95_critic=qr_v=0.0_hedttm=30'\n",
+        "workfolder = '/home/hedge/gamma-vega-rl-hedging/logs/run_20250418_175637/RL/Huber/spread=0.005_obj=cvar_threshold=0.95_critic=qr-huber_v=0.3_hedttm=30'\n",
         "eval_quantiles = [0.95, 0.85, 0.75,0.65]\n",
         "fig = go.Figure()\n",
         "generate_stat(\n",
