made the LMMSABR param sampling deterministic by default. in the middle of cleaning Rl class to only predict gamma. moving delta hedging completely out of the policy net and into environment.

--- a/result analysis/RL&Baseline_Strategy_Analysis.ipynb
+++ b/result analysis/RL&Baseline_Strategy_Analysis.ipynb
@@ -30,6 +30,41 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Error importing agent modules: No module named 'agent'\n",
+            "Please ensure the notebook kernel can find the 'agent' directory.\n",
+            "You might need to add the project root directory to sys.path (see commented code above).\n"
+          ]
+        },
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'agent'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 21\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# --- Direct Imports from your project ---\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Add the project root to the path if necessary, e.g.:\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# import sys\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# project_root = '/home/hedge/gamma-vega-rl-hedging' # Adjust if needed\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# if project_root not in sys.path:\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#    sys.path.insert(0, project_root)\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# Assuming these classes are in agent/agent.py\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01magent\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01magent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m KernelLayer, ObservationWithKernel, PolicyWithHedge\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;66;03m# If distributional classes are needed for network creation (e.g., critic), import them too\u001b[39;00m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;66;03m# from agent import distributional as ad\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'agent'"
+          ]
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     },
