--- a/check_results.ipynb
+++ b/check_results.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "052876a8",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
     "\n",
     "\n",
     "def load_df(name, spread, dataset):\n",
-    "    df = pd.read_csv(f'/home/hedge/gamma-vega-rl-hedging/logs/greekhedge_spread={spread}/minimal/{name}/logs/eval_env/logs.csv'\n",
+    "    df = pd.read_csv(f'/home/hedge/gamma-vega-rl-hedging/logs/greekhedge_spread={spread}/{dataset}/{name}/logs/eval_env/logs.csv'\n",
     "                           )\n",
     "    return df\n",
     "spread = 0.01\n",
